# Eurora

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeListsb.txt  Pipfile  conanfile.py
automation/: manage.py
automation/buildkit/: build_eurora.py  build_runner.py  build_win.py  cmake_helper.py  conan_helper.py
automation/config/: project_config.py
automation/environment/: env_setup.py  venv_helper.py
automation/utils/: __init__.py  code_format.py  print_tree.py  shell_utils.py
benchmarks/: CMakeLists.txt  benchmark_vector_operations.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  GenerateAndInstallConfig.cmake  MarkIxxInterface.cmake  PlatformSettings.cmake  ProjectOptions.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Tools.cmake  Utils.cmake
config/: log_config.json  project_config.json
configured/: config.hpp.in
core/: ndarray_eigen.cpp
doc/: 架构设计.md
include/eurora/core/: ndarray.h  ndarray_eigen.hpp  types.h
include/eurora/core/ndarray/: ndarray.h  ndarray_eigen.hpp  ndarray_factory.hpp  ndarray_view.hpp
include/eurora/math/: backend_manager.hpp  backend_mapping.hpp  backend_type.h  call_function.hpp  function_dispatcher.h  function_table_manager.h  generate_function_table.hpp  math.hpp  math_api.hpp  matrix_ops.hpp  types.h  vector_ops.h  vector_ops.hpp
include/eurora/math/backend/: vector_eigen_backend.h
include/eurora/math/backends/: vector_armadillo.hpp  vector_eigen.hpp  vector_mkl.hpp  vector_numcpp.hpp
include/eurora/utils/: enum_utils.hpp  error_codes.h  exception.h  exception.hpp  export_macros.h  logger.h  logger_level.h
include/eurora/utils/exception/: exception.h
src/: CMakeLists.txt
src/apps/client/: eurora_ismrmrd_client.cpp  main.cpp  server_connector.cpp  server_connector.h
src/apps/frontend/: config.cpp  config.h  http_server.h  main.cpp  system_info.cpp  system_info.h  task_manager.h
src/common/: CMakeLists.txt
src/common/exception/: ErrorCodes.cpp  Exception.cpp  error_codes.cpp  exceptions.cpp
src/common/logger/: WLog.hpp
src/common/utils/: ArgumentParser.cpp  ArgumentParser.hpp  StringUtils.cpp  argument_parser.cpp  file_utils.cpp  string_utils.cpp  time_utils.cpp
src/core/: CMakeLists.txt  eurora_paths.cpp  eurora_paths.h  ismrmrd_context_variables.cpp  ismrmrd_context_variables.h  storage_setup.hpp  thread_pool.hpp  thread_safe_queue.hpp  types.h
src/core/io/: adapt_struct.h  ismrmrd_io.h
src/core/messaging/: message_dispatcher.h  message_system.h  message_unpacker.h  mpmc_channel.h
src/internal/common/exception/: ErrorCodes.h  Exception.h  error_codes.h  exception.h
src/internal/common/logger/: Logger.hpp  WLog.hpp  logger.h  loggers.hpp  wlog.hpp  wlogs.hpp
src/internal/common/pattern/: Singleton.hpp  singleton.hpp
src/internal/common/utils/: ArgumentParser.hpp  StringUtils.h  SystemMacro.h  argument_parser.hpp  file_utils.h  string_utils.h  system_macro.h  time_utils.h
src/internal/core/messaging/: channel.h  message.h  message_builder.h  message_chunk.h  message_dispatcher.h
src/internal/core/ndarray/: complext.hpp  dynamic_ndarray.hpp  dynamic_ndarray_view.hpp  tensor_utils.h
src/internal/core/ndarray/cpu/: cpu_ndarray.hpp  cpu_ndpoint.hpp
src/math/: CMakeLists.txt
src/math/backend/: matrix_ops_eigen.cpp  matrix_ops_mkl.cpp  vector_eigen_backend.cpp
src/math/backends/armadillo/: vector_armadillo.cpp  vector_armadillo.h
src/math/backends/eigen/: vector_eigen.cpp  vector_eigen.h
src/math/backends/numcpp/: vector_numcpp.cpp  vector_numcpp.h
src/utils/: CMakeLists.txt  file_utils.cpp  time_utils.cpp  time_utils.h
src/utils/argument_parser/: argument_parser.cpp
src/utils/common/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  file_utils.cpp  file_utils.h  string_utils.cpp  string_utils.h  system_macro.h
src/utils/exception/: error_codes.cpp  error_codes.h  exception.cpp  exception.h
src/utils/log/: CMakeLists.txt  wlog.cpp  wlog.hpp
src/utils/logger/: CMakeLists.txt  logger.cpp  logger.h  logger_impl.h  logger_impl_spdlog.cpp  logger_impl_spdlog.h  wlog.hpp
src/utils/pattern/: singleton.hpp
src/utils/time/: CMakeLists.txt  datetime_provider.cpp  datetime_provider.h  time_utils.h
test/: CMakeLists.txt
test/cmake_tests/: CMakeLists.txt  test_add_library_module.cmake
test/common/: CMakeLists.txt  logger.cpp
test/core/: thread_pool_ut.cpp  thread_safe_queue_ut.cpp
test/math/: vector_operations_ut.cpp
test/utils/: datetime_provider_ut.cpp  exception_ut.cpp  logger.cpp  logger_ut.cpp  time.cpp
